@@ -1,1 +1,0 @@
-MSH|^~\&|ST01|B|IM|B|20061211154319||ADT^A08|6917898|P|2.2|6917898||AL|||||||2.2bEVN|A08|20061211154319|||MRPPID|1|01001991^^^ST01|988747372^^^ST01B^MR~983928341^^^ST01C^MR~93823848^^^ST01^PI||JONES6^SMITH^P^""||13939394|F||2|123 MAIN ST^^ANYTOWN^AL^35432^USA^H^01^^^^^^^^^Y||(205)555-1212|(205)555-1212|E^ENGLISH^HL70296^E^ENGLISH^99CLAN|M|CH|039838382^^^ST01B|123-45-6789|||||N|||N|2^NON-HISPANIC^99NAT||N|N|||||||||||||||||||NPV1|1|I|MD5W^0541^00^B^OCC||ZAX|AAA^111&222&&444^^3333^~BBB^111&222&&^^3333|foobar|~~|escapes1=:;\R\\E\\T\^escapes2=\F\\S\\R\\E\\T\|ZAX|two
